--- a/Exposición/agua.css
+++ b/Exposición/agua.css
@@ -53,6 +53,15 @@ body{
     animation: 0.5s;
     background: #03a9f4;
 }
+@media (max-width:1200px) {
+    .content h2{
+        position: absolute;
+        color: #fff;
+        transform: translate(-50%,-50%);
+        font-size: 8em;
+        font-weight: 900;
+    }
+}
 @keyframes animate {
     0%,100%{
         clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
