--- a/Exposición/css/presentacion.css
+++ b/Exposición/css/presentacion.css
@@ -6,7 +6,14 @@ body{
     align-items: center;
     flex-direction: column;
 }
-
+.pres{
+    width: 80vw;
+    height: 70vh;
+    background: transparent;
+}
+iframe{
+    width: 80vw;
+}
 a{
     position: relative;
     top: 20px;  
@@ -27,4 +34,9 @@ a:hover{
     color: #fff;
     animation: 0.5s;
     background: #03a9f4;
+}
+@media (min-width:1024px) {
+    a{
+        top: 150px;  
+    }    
 }
