--- a/Friendzone/estilos.css
+++ b/Friendzone/estilos.css
@@ -36,7 +36,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 	font-size: 36px;
 	font-weight: 600;
 	margin-bottom: 10px;
-	color: #ffff0;
+	color: #000;
 	text-align: center;
 }
 .opciones .div-btn{
